Fix footer alignment

--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -1,5 +1,5 @@
 main {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,7 @@ main {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
