--- a/assets/stylesheets/page.css
+++ b/assets/stylesheets/page.css
@@ -3,6 +3,8 @@ main,
   width: 100%;
   max-width: 760px;
   margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 
 header {
